[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fixed-income-quant"
version = "0.1.0"
description = "Benchmark-relative analytics and risk-aware bond market making."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Thayron Carlessi" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fixed_income_quant"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
